--- a/r5dev/vproj/clientsdk.vcxproj
+++ b/r5dev/vproj/clientsdk.vcxproj
@@ -82,6 +82,7 @@
     <ClCompile Include="..\rtech\stryder\stryder.cpp" />
     <ClCompile Include="..\squirrel\sqapi.cpp" />
     <ClCompile Include="..\squirrel\sqinit.cpp" />
+    <ClCompile Include="..\squirrel\sqscript.cpp" />
     <ClCompile Include="..\squirrel\sqstdaux.cpp" />
     <ClCompile Include="..\squirrel\sqvm.cpp" />
     <ClCompile Include="..\thirdparty\imgui\src\imgui_utility.cpp" />
@@ -223,6 +224,7 @@
     <ClInclude Include="..\rtech\stryder\stryder.h" />
     <ClInclude Include="..\squirrel\sqapi.h" />
     <ClInclude Include="..\squirrel\sqinit.h" />
+    <ClInclude Include="..\squirrel\sqscript.h" />
     <ClInclude Include="..\squirrel\sqstate.h" />
     <ClInclude Include="..\squirrel\sqstdaux.h" />
     <ClInclude Include="..\squirrel\sqtype.h" />
