--- a/r5dev/vproj/dedicated.vcxproj
+++ b/r5dev/vproj/dedicated.vcxproj
@@ -221,6 +221,7 @@
     <ClInclude Include="..\server\vengineserver_impl.h" />
     <ClInclude Include="..\squirrel\sqapi.h" />
     <ClInclude Include="..\squirrel\sqinit.h" />
+    <ClInclude Include="..\squirrel\sqscript.h" />
     <ClInclude Include="..\squirrel\sqstate.h" />
     <ClInclude Include="..\squirrel\sqstdaux.h" />
     <ClInclude Include="..\squirrel\sqtype.h" />
@@ -499,6 +500,7 @@
     <ClCompile Include="..\server\vengineserver_impl.cpp" />
     <ClCompile Include="..\squirrel\sqapi.cpp" />
     <ClCompile Include="..\squirrel\sqinit.cpp" />
+    <ClCompile Include="..\squirrel\sqscript.cpp" />
     <ClCompile Include="..\squirrel\sqstdaux.cpp" />
     <ClCompile Include="..\squirrel\sqvm.cpp" />
     <ClCompile Include="..\tier0\commandline.cpp" />
