--- a/r5dev/resource/cfg/autoexec_server.cfg
+++ b/r5dev/resource/cfg/autoexec_server.cfg
@@ -4,7 +4,7 @@
 //////////////////////////
 //// SERVER           ////
 //////////////////////////
-hostname                     "R5"     // Determines the name of the server displayed in the server browser.
+//hostname                     "R5"     // Determines the name of the server displayed in the server browser.
 sv_pylonvisibility           "0"      // Determines the visiblity to the Pylon Master Server (server browser), 0 = Not visible, 1 = Visible.
 
 sv_requireOriginToken        "0"      // Enables origin token verification on the server
