--- a/r5dev/resource/cfg/autoexec_server_dev.cfg
+++ b/r5dev/resource/cfg/autoexec_server_dev.cfg
@@ -4,8 +4,8 @@
 //////////////////////////
 //// SERVER           ////
 //////////////////////////
-hostname                     "R5"     // Determines the name of the server displayed in the server browser.
-sv_pylonvisibility           "0"      // Determines the visiblity to the Pylon Master Server (server browser), 0 = Not visible, 1 = Visible.
+//hostname                     "R5"     // Determines the name of the server displayed in the server browser.
+//sv_pylonvisibility           "0"      // Determines the visiblity to the Pylon Master Server (server browser), 0 = Not visible, 1 = Visible.
 
 sv_requireOriginToken        "0"      // Enables origin token verification on the server
 
