Implement data sharing algorithm in VPK packing
This reduces size of the resulting VPK (checks entry block in hash map).
mp_common compresses to 32mb instead of 37.3mb (original is 38.5mb).

--- a/r5dev/vproj/clientsdk.vcxproj.filters
+++ b/r5dev/vproj/clientsdk.vcxproj.filters
@@ -504,6 +504,9 @@
     <ClCompile Include="..\squirrel\sqscript.cpp">
       <Filter>sdk\squirrel</Filter>
     </ClCompile>
+    <ClCompile Include="..\mathlib\sha1.cpp">
+      <Filter>sdk\mathlib</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1507,6 +1510,9 @@
     </ClInclude>
     <ClInclude Include="..\squirrel\sqscript.h">
       <Filter>sdk\squirrel</Filter>
+    </ClInclude>
+    <ClInclude Include="..\mathlib\sha1.h">
+      <Filter>sdk\mathlib</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
