--- a/r5dev/vproj/gamesdk.vcxproj
+++ b/r5dev/vproj/gamesdk.vcxproj
@@ -66,6 +66,7 @@
     <ClCompile Include="..\mathlib\bits.cpp" />
     <ClCompile Include="..\mathlib\crc32.cpp" />
     <ClCompile Include="..\mathlib\IceKey.cpp" />
+    <ClCompile Include="..\mathlib\sha1.cpp" />
     <ClCompile Include="..\mathlib\sha256.cpp" />
     <ClCompile Include="..\networksystem\pylon.cpp" />
     <ClCompile Include="..\networksystem\r5net.cpp" />
@@ -205,6 +206,7 @@
     <ClInclude Include="..\mathlib\crc32.h" />
     <ClInclude Include="..\mathlib\IceKey.H" />
     <ClInclude Include="..\mathlib\parallel_for.h" />
+    <ClInclude Include="..\mathlib\sha1.h" />
     <ClInclude Include="..\mathlib\sha256.h" />
     <ClInclude Include="..\mathlib\swap.h" />
     <ClInclude Include="..\mathlib\vector.h" />
