--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -534,6 +534,9 @@
     <ClCompile Include="..\squirrel\sqscript.cpp">
       <Filter>sdk\squirrel</Filter>
     </ClCompile>
+    <ClCompile Include="..\mathlib\sha1.cpp">
+      <Filter>sdk\mathlib</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1570,6 +1573,9 @@
     </ClInclude>
     <ClInclude Include="..\squirrel\sqscript.h">
       <Filter>sdk\squirrel</Filter>
+    </ClInclude>
+    <ClInclude Include="..\mathlib\sha1.h">
+      <Filter>sdk\mathlib</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
