Add define for compiling launcher for dedicated servers
This sets the selected mode to server by default upon launch

--- a/r5dev/vproj/sdklauncher.vcxproj
+++ b/r5dev/vproj/sdklauncher.vcxproj
@@ -139,6 +139,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\core\stdafx.h" />
+    <ClInclude Include="..\launcher\launcherdefs.h" />
     <ClInclude Include="..\public\include\utility.h" />
     <ClInclude Include="..\sdklauncher\basepanel.h" />
     <ClInclude Include="..\sdklauncher\sdklauncher.h" />
