--- a/r5dev/resource/cfg/englishclient_extract_vpk.cfg
+++ b/r5dev/resource/cfg/englishclient_extract_vpk.cfg
@@ -1,10 +1,10 @@
-fs_unpack_vpk "vpk/englishclient_frontend.bsp.pak000_dir.vpk"
-fs_unpack_vpk "vpk/englishclient_mp_common.bsp.pak000_dir.vpk"
-fs_unpack_vpk "vpk/englishclient_mp_rr_aqueduct.bsp.pak000_dir.vpk"
-fs_unpack_vpk "vpk/englishclient_mp_rr_ashs_redemption.bsp.pak000_dir.vpk"
-fs_unpack_vpk "vpk/englishclient_mp_rr_canyonlands_64k_x_64k.bsp.pak000_dir.vpk"
-fs_unpack_vpk "vpk/englishclient_mp_rr_canyonlands_mu1.bsp.pak000_dir.vpk"
-fs_unpack_vpk "vpk/englishclient_mp_rr_canyonlands_mu1_night.bsp.pak000_dir.vpk"
-fs_unpack_vpk "vpk/englishclient_mp_rr_canyonlands_staging.bsp.pak000_dir.vpk"
-fs_unpack_vpk "vpk/englishclient_mp_rr_desertlands_64k_x_64k.bsp.pak000_dir.vpk"
-fs_unpack_vpk "vpk/englishclient_mp_rr_desertlands_64k_x_64k_nx.bsp.pak000_dir.vpk"
+fs_vpk_unpack "vpk/englishclient_frontend.bsp.pak000_dir.vpk"
+fs_vpk_unpack "vpk/englishclient_mp_common.bsp.pak000_dir.vpk"
+fs_vpk_unpack "vpk/englishclient_mp_rr_aqueduct.bsp.pak000_dir.vpk"
+fs_vpk_unpack "vpk/englishclient_mp_rr_ashs_redemption.bsp.pak000_dir.vpk"
+fs_vpk_unpack "vpk/englishclient_mp_rr_canyonlands_64k_x_64k.bsp.pak000_dir.vpk"
+fs_vpk_unpack "vpk/englishclient_mp_rr_canyonlands_mu1.bsp.pak000_dir.vpk"
+fs_vpk_unpack "vpk/englishclient_mp_rr_canyonlands_mu1_night.bsp.pak000_dir.vpk"
+fs_vpk_unpack "vpk/englishclient_mp_rr_canyonlands_staging.bsp.pak000_dir.vpk"
+fs_vpk_unpack "vpk/englishclient_mp_rr_desertlands_64k_x_64k.bsp.pak000_dir.vpk"
+fs_vpk_unpack "vpk/englishclient_mp_rr_desertlands_64k_x_64k_nx.bsp.pak000_dir.vpk"
