--- a/r5dev/vproj/libimgui.vcxproj.filters
+++ b/r5dev/vproj/libimgui.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="..\thirdparty\imgui\include\imstb_truetype.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="..\thirdparty\imgui\include\imgui_editor.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\thirdparty\imgui\src\imgui.cpp" />
@@ -46,5 +49,6 @@
     <ClCompile Include="..\thirdparty\imgui\src\imgui_stdlib.cpp" />
     <ClCompile Include="..\thirdparty\imgui\src\imgui_tables.cpp" />
     <ClCompile Include="..\thirdparty\imgui\src\imgui_widgets.cpp" />
+    <ClCompile Include="..\thirdparty\imgui\src\imgui_editor.cpp" />
   </ItemGroup>
 </Project>
