--- a/r5dev/vproj/libimgui.vcxproj
+++ b/r5dev/vproj/libimgui.vcxproj
@@ -25,6 +25,7 @@
     <ClInclude Include="..\thirdparty\imgui\include\imgui_impl_dx11.h" />
     <ClInclude Include="..\thirdparty\imgui\include\imgui_impl_win32.h" />
     <ClInclude Include="..\thirdparty\imgui\include\imgui_internal.h" />
+    <ClInclude Include="..\thirdparty\imgui\include\imgui_logger.h" />
     <ClInclude Include="..\thirdparty\imgui\include\imgui_stdlib.h" />
     <ClInclude Include="..\thirdparty\imgui\include\imgui_utility.h" />
     <ClInclude Include="..\thirdparty\imgui\include\imstb_rectpack.h" />
@@ -63,6 +64,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="..\thirdparty\imgui\src\imgui_logger.cpp" />
     <ClCompile Include="..\thirdparty\imgui\src\imgui_stdlib.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
