--- a/r5dev/vproj/gamesdk.vcxproj
+++ b/r5dev/vproj/gamesdk.vcxproj
@@ -63,6 +63,7 @@
     <ClCompile Include="..\launcher\launcher.cpp" />
     <ClCompile Include="..\materialsystem\cmaterialglue.cpp" />
     <ClCompile Include="..\materialsystem\cmaterialsystem.cpp" />
+    <ClCompile Include="..\materialsystem\cshaderglue.cpp" />
     <ClCompile Include="..\mathlib\adler32.cpp" />
     <ClCompile Include="..\mathlib\bits.cpp" />
     <ClCompile Include="..\mathlib\crc32.cpp" />
@@ -201,6 +202,7 @@
     <ClInclude Include="..\launcher\launcher.h" />
     <ClInclude Include="..\materialsystem\cmaterialglue.h" />
     <ClInclude Include="..\materialsystem\cmaterialsystem.h" />
+    <ClInclude Include="..\materialsystem\cshaderglue.h" />
     <ClInclude Include="..\mathlib\adler32.h" />
     <ClInclude Include="..\mathlib\bits.h" />
     <ClInclude Include="..\mathlib\color.h" />
