--- a/r5dev/vproj/clientsdk.vcxproj
+++ b/r5dev/vproj/clientsdk.vcxproj
@@ -58,11 +58,19 @@
     <ClCompile Include="..\materialsystem\cmaterialglue.cpp" />
     <ClCompile Include="..\materialsystem\cmaterialsystem.cpp" />
     <ClCompile Include="..\mathlib\adler32.cpp" />
+    <ClCompile Include="..\mathlib\almostequal.cpp" />
     <ClCompile Include="..\mathlib\bits.cpp" />
+    <ClCompile Include="..\mathlib\color_conversion.cpp" />
     <ClCompile Include="..\mathlib\crc32.cpp" />
+    <ClCompile Include="..\mathlib\halton.cpp" />
     <ClCompile Include="..\mathlib\IceKey.cpp" />
+    <ClCompile Include="..\mathlib\mathlib_base.cpp" />
+    <ClCompile Include="..\mathlib\powsse.cpp" />
+    <ClCompile Include="..\mathlib\randsse.cpp" />
     <ClCompile Include="..\mathlib\sha1.cpp" />
     <ClCompile Include="..\mathlib\sha256.cpp" />
+    <ClCompile Include="..\mathlib\sseconst.cpp" />
+    <ClCompile Include="..\mathlib\vmatrix.cpp" />
     <ClCompile Include="..\networksystem\pylon.cpp" />
     <ClCompile Include="..\protoc\cl_rcon.pb.cc">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
@@ -109,11 +117,13 @@
     <ClCompile Include="..\vpc\IAppSystem.cpp" />
     <ClCompile Include="..\vpc\interfaces.cpp" />
     <ClCompile Include="..\vpc\keyvalues.cpp" />
+    <ClCompile Include="..\vphysics\physics_collide.cpp" />
     <ClCompile Include="..\vphysics\QHull.cpp" />
     <ClCompile Include="..\vpklib\packedstore.cpp" />
     <ClCompile Include="..\vstdlib\callback.cpp" />
     <ClCompile Include="..\vstdlib\completion.cpp" />
     <ClCompile Include="..\vstdlib\keyvaluessystem.cpp" />
+    <ClCompile Include="..\vstdlib\random.cpp" />
     <ClCompile Include="..\windows\console.cpp" />
     <ClCompile Include="..\windows\id3dx.cpp" />
     <ClCompile Include="..\windows\input.cpp" />
@@ -189,12 +199,23 @@
     <ClInclude Include="..\mathlib\bits.h" />
     <ClInclude Include="..\mathlib\color.h" />
     <ClInclude Include="..\mathlib\crc32.h" />
+    <ClInclude Include="..\mathlib\halton.h" />
     <ClInclude Include="..\mathlib\IceKey.H" />
+    <ClInclude Include="..\mathlib\mathlib.h" />
+    <ClInclude Include="..\mathlib\math_pfns.h" />
+    <ClInclude Include="..\mathlib\noisedata.h" />
     <ClInclude Include="..\mathlib\parallel_for.h" />
     <ClInclude Include="..\mathlib\sha1.h" />
     <ClInclude Include="..\mathlib\sha256.h" />
+    <ClInclude Include="..\mathlib\ssemath.h" />
+    <ClInclude Include="..\mathlib\ssenoise.h" />
+    <ClInclude Include="..\mathlib\ssequaternion.h" />
     <ClInclude Include="..\mathlib\swap.h" />
     <ClInclude Include="..\mathlib\vector.h" />
+    <ClInclude Include="..\mathlib\vector2d.h" />
+    <ClInclude Include="..\mathlib\vector4d.h" />
+    <ClInclude Include="..\mathlib\vmatrix.h" />
+    <ClInclude Include="..\mathlib\vplane.h" />
     <ClInclude Include="..\milessdk\win64_rrthreads.h" />
     <ClInclude Include="..\networksystem\pylon.h" />
     <ClInclude Include="..\networksystem\serverlisting.h" />
@@ -452,6 +473,7 @@
     <ClInclude Include="..\vstdlib\callback.h" />
     <ClInclude Include="..\vstdlib\completion.h" />
     <ClInclude Include="..\vstdlib\keyvaluessystem.h" />
+    <ClInclude Include="..\vstdlib\random.h" />
     <ClInclude Include="..\windows\console.h" />
     <ClInclude Include="..\windows\id3dx.h" />
     <ClInclude Include="..\windows\input.h" />
