--- a/r5dev/vproj/dedicated.vcxproj.filters
+++ b/r5dev/vproj/dedicated.vcxproj.filters
@@ -1167,6 +1167,9 @@
     <ClInclude Include="..\mathlib\transform.h">
       <Filter>sdk\mathlib</Filter>
     </ClInclude>
+    <ClInclude Include="..\server\persistence.h">
+      <Filter>sdk\server</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\opcodes.cpp">
@@ -1465,6 +1468,9 @@
     </ClCompile>
     <ClCompile Include="..\tier0\threadtools.cpp">
       <Filter>sdk\tier0</Filter>
+    </ClCompile>
+    <ClCompile Include="..\server\persistence.cpp">
+      <Filter>sdk\server</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
