Public IVDebugOverlay VFTable interface.
New public interface to add debug overlays on the go (memory is managed by the game module).
3 new commands:
* line.
* sphere.
* capsule.

--- a/r5dev/vproj/clientsdk.vcxproj.filters
+++ b/r5dev/vproj/clientsdk.vcxproj.filters
@@ -1616,6 +1616,9 @@
     <ClInclude Include="..\mathlib\transform.h">
       <Filter>sdk\mathlib</Filter>
     </ClInclude>
+    <ClInclude Include="..\public\include\idebugoverlay.h">
+      <Filter>sdk\public\include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\shared\resource\lockedserver.png">
